--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/css2/app.css">
   <link rel="stylesheet" href="assets/hamburger.css">
+  <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <script src="assets/main.js" defer></script>
 </head>
   
