--- a/index2.html
+++ b/index2.html
@@ -14,8 +14,19 @@
 </head>
   
 <body>
-  <!-- TOPBAR (Social RIGHT only) -->
-  <div class="topbar">
+ 
+<!-- HEADER -->
+<header class="siteHeader">
+  <div class="navInner">
+
+    <!-- Brand + Social LEFT -->
+    <div class="brandBlock">
+      <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+        <span class="dot" aria-hidden="true"></span>
+        <span class="brandText">KRUNIKI</span>
+      </a>
+
+    <div class="topbar">
     <div class="right">
       <div class="social" aria-label="ช่องทางโซเชียลของ KRUNIKI">
         <!-- LINE OA -->
@@ -66,16 +77,6 @@
       </div>
     </div>
   </div>
-
-<!-- HEADER -->
-<header class="siteHeader">
-  <div class="navInner">
-
-    <!-- Brand LEFT -->
-    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
-      <span class="dot" aria-hidden="true"></span>
-      <span class="brandText">KRUNIKI</span>
-    </a>
 
     <!-- Desktop Menu CENTER (เดิม ไม่แตะโครงสร้าง/ลิงก์) -->
     <nav class="navLinks" aria-label="Primary navigation">
