--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 <header class="siteHeader">
   <div class="navInner">
 
-    <!-- Brand + Social LEFT -->
+    <!-- Brand + Social -->
     <div class="brandBlock">
       <a class="brand" href="index.html" aria-label="KRUNIKI Home">
         <span class="dot" aria-hidden="true"></span>
