--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>KRUNIKI Academy</title>
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
-
+<style>
+  :root{
+    --font-brand: "Times New Roman", Times, serif;
+    --font-head:  "Times New Roman", Times, serif;
+  }
+</style>
+  
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/css2/app.css">
   <link rel="stylesheet" href="assets/hamburger.css">
