--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,8 @@
   
   <!-- 🔗 CSS เดิมของนิกี้ -->
   <link rel="stylesheet" href="assets/css2/app.css">
+  <link rel="stylesheet" href="assets/css2/core/02_base.css">
+  <link rel="stylesheet" href="assets/css2/pages/index2.css">
   <link rel="stylesheet" href="assets/hamburger.css">
   <link rel="stylesheet" href="assets/css2/fixes/99_hotfix.css">
   <script src="assets/main.js" defer></script>
