--- a/index2.html
+++ b/index2.html
@@ -175,7 +175,7 @@
 
         <a href="service-20min.html" class="card cardLink" aria-label="ไปหน้าบริการ KRUNIKI Heart Awakening 20 นาที">
           <div class="kicker">20-Minute Session</div>
-          <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
+          <h3>1.KRUNIKI Heart Awakening — Session 20 นาที</h3>
           <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
           <div class="cardAction">
             <span class="btnGhost">ดูรายละเอียดบริการ →</span>
