--- a/index2.html
+++ b/index2.html
@@ -173,16 +173,14 @@
       <!-- ✅ FIX: การ์ดทั้งหมดต้องอยู่ใน grid เดียวกัน -->
       <div class="grid2">
 
-        <a href="service-20min.html" class="card cardLink card--num1" aria-label="ไปหน้าบริการ KRUNIKI Heart Awakening 20 นาที">
-  <span class="cardNumber">1</span>
-
-  <div class="kicker">20-Minute Session</div>
-  <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
-  <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
-  <div class="cardAction">
-    <span class="btnGhost">ดูรายละเอียดบริการ →</span>
-  </div>
-</a>
+      <a href="service-20min.html" class="card cardLink" aria-label="ไปหน้าบริการ KRUNIKI Heart Awakening 20 นาที">
+          <div class="kicker">20-Minute Session</div>
+          <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
+          <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
+          <div class="cardAction">
+            <span class="btnGhost">ดูรายละเอียดบริการ →</span>
+          </div>
+        </a>
         <a href="service-programs.html" class="card cardLink" aria-label="ไปหน้าโปรแกรม Self-Healing">
           <div class="kicker">Programs</div>
           <h3>โปรแกรม Self-Healing</h3>
