--- a/index2.html
+++ b/index2.html
@@ -246,7 +246,7 @@
 
           <div class="lineCta">
             <div class="lineCtaTitle">
-              <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" style="color:rgba(255,255,255,.85)">
+              <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true" style="color:#c9a86a">
                 <path d="M21 12c0 4.4-4 8-9 8-1.1 0-2.2-.2-3.2-.5L4 21l1-3.2C3.7 16.3 3 14.2 3 12c0-4.4 4-8 9-8s9 3.6 9 8Z"
                   fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
               </svg>
