--- a/shop.html
+++ b/shop.html
@@ -127,7 +127,120 @@
   <main class="wrap">
 
     <!-- HERO -->
-  
+    <section class="shop-hero">
+    <div class="container">
+      <h1>KRUNIKI Shop</h1>
+      <p>เลือกสิ่งที่พาหัวใจกลับบ้าน — eBook, แทร็กสมาธิ, Brainwaves และสินค้าไลฟ์สไตล์</p>
+
+      <div class="shop-actions">
+        <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">
+          ไปที่ร้าน LINE SHOP
+        </a>
+        <a class="btn-secondary" href="index.html">กลับหน้าแรก</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="shop-filters" aria-label="ตัวกรองสินค้า">
+    <div class="container filter-row">
+      <button class="filter-btn is-active" type="button" data-filter="all">ทั้งหมด</button>
+      <button class="filter-btn" type="button" data-filter="ebook">eBook</button>
+      <button class="filter-btn" type="button" data-filter="meditation">แทร็กสมาธิ</button>
+      <button class="filter-btn" type="button" data-filter="brainwaves">Brainwaves</button>
+      <button class="filter-btn" type="button" data-filter="physical">สินค้าจัดส่ง</button>
+    </div>
+  </section>
+
+  <section class="shop-grid">
+    <div class="container product-grid">
+
+      <!-- 1) eBook -->
+      <article class="product-card" data-category="ebook">
+        <div class="product-media">
+          <img src="assets/images/products/ebook-raktae.jpg" alt="eBook รักแท้จากตัวเอง">
+        </div>
+        <div class="product-body">
+          <p class="badge">eBook</p>
+          <h3>รักแท้จากตัวเอง</h3>
+          <p class="desc">หนังสือดิจิทัลเพื่อพาหัวใจกลับบ้าน และเริ่มคืนคุณค่าในตัวเองอย่างอ่อนโยน</p>
+          <div class="product-actions">
+            <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ซื้อผ่าน LINE SHOP</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- 2) Meditation Track -->
+      <article class="product-card" data-category="meditation">
+        <div class="product-media">
+          <img src="assets/images/products/meditation-track.jpg" alt="แทร็กสมาธิ - KRUNIKI">
+        </div>
+        <div class="product-body">
+          <p class="badge">แทร็กสมาธิ</p>
+          <h3>Guided Meditation Track</h3>
+          <p class="desc">เสียงนำสมาธิสำหรับการคืนพลังหัวใจ ปรับคลื่นใจ และรีเซ็ตพลังงานในวันหนัก ๆ</p>
+          <div class="product-actions">
+            <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ซื้อผ่าน LINE SHOP</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- 3) Theta -->
+      <article class="product-card" data-category="brainwaves">
+        <div class="product-media">
+          <img src="assets/images/products/theta-waves.jpg" alt="Theta Waves - KRUNIKI">
+        </div>
+        <div class="product-body">
+          <p class="badge">Brainwaves</p>
+          <h3>Theta Waves</h3>
+          <p class="desc">สำหรับการผ่อนคลายลึก การเยียวยา และภาวะจิตที่นิ่งนุ่ม (เหมาะฟังตามคำแนะนำ)</p>
+          <div class="product-actions">
+            <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ซื้อผ่าน LINE SHOP</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- 4) Alpha -->
+      <article class="product-card" data-category="brainwaves">
+        <div class="product-media">
+          <img src="assets/images/products/alpha-waves.jpg" alt="Alpha Waves - KRUNIKI">
+        </div>
+        <div class="product-body">
+          <p class="badge">Brainwaves</p>
+          <h3>Alpha Waves</h3>
+          <p class="desc">สำหรับโฟกัสเบาสบาย สมองปลอดโปร่ง และการทำงาน/เรียนในโหมดใจนิ่ง</p>
+          <div class="product-actions">
+            <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ซื้อผ่าน LINE SHOP</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- 5) กางเกงช้าง -->
+      <article class="product-card" data-category="physical">
+        <div class="product-media">
+          <img src="assets/images/products/elephant-pants.jpg" alt="กางเกงช้าง - KRUNIKI">
+        </div>
+        <div class="product-body">
+          <p class="badge">สินค้าจัดส่ง</p>
+          <h3>กางเกงช้าง</h3>
+          <p class="desc">ไอเท็มสบาย ๆ ใส่ได้ทุกวัน (รายละเอียดสี/ไซซ์ดูใน LINE SHOP)</p>
+          <div class="product-actions">
+            <a class="btn-line-shop" href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">ซื้อผ่าน LINE SHOP</a>
+          </div>
+        </div>
+      </article>
+
+    </div>
+  </section>
+
+  <section class="shop-notes">
+    <div class="container">
+      <h2>วิธีรับสินค้า</h2>
+      <ul class="notes">
+        <li><strong>สินค้าดิจิทัล:</strong> ซื้อแล้วรับรายละเอียด/ลิงก์ตามระบบใน LINE SHOP</li>
+        <li><strong>สินค้าจัดส่ง:</strong> รายละเอียดการจัดส่ง/สี/ไซซ์ ดูในหน้า LINE SHOP</li>
+      </ul>
+    </div>
+    
       <footer>
         © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
       </footer>
